# stm32-servo-angle-sync

./: .gitignore  CMakeLists.txt  README.md  hardware_connection.drawio
core/include/servo_sync/: angle_frame.h  angle_math.h  angle_receiver.h  moving_average.h
core/src/: angle_frame.c  angle_receiver.c  moving_average.c
docs/: cubemx_setup.md  demo_checklist.md  github_workflow.md  hardware_connection.md  wiring.md
firmware/: README.md  app_entry.c  app_master_can.c  app_master_uart.c  app_slave_can.c  app_slave_uart.c
firmware/common/: board_config.h
stm32_mdk_project/: 1.ioc  SERVO_SYNC_INTEGRATION.md
stm32_mdk_project/Core/Inc/: app.h  app_config.h  can.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
stm32_mdk_project/Core/Inc/common/: board_config.h
stm32_mdk_project/Core/Inc/servo_sync/: angle_frame.h  angle_receiver.h  moving_average.h
stm32_mdk_project/Core/Src/: adc.c  can.c  gpio.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
stm32_mdk_project/Core/Src/app/: app_entry.c  app_master_can.c  app_master_uart.c  app_slave_uart.c
stm32_mdk_project/Core/Src/servo_sync/: angle_frame.c  angle_math.c  angle_receiver.c
stm32_mdk_project/MDK-ARM/: 1.uvoptx  1.uvprojx
stm32_mdk_project/MDK-ARM/RTE/_1/: RTE_Components.h
tests/: test_core.c  test_long_run.c
